@@ -342,4 +342,40 @@ END_CHANGES
   );
 }
 
+{
+  my $tzil = Builder->from_config(
+    { dist_root => 'corpus/dist/DZT' },
+    {
+      add_files => {
+        'source/Changes' => $changes,
+        'source/dist.ini' => simple_ini(
+                'GatherDir',
+                [ NextRelease => { format => '%v %P' } ],
+                [ '%PAUSE' => { username  => 'NOBODY', password => 'ohhai' } ],
+                [ UploadToCPAN => ],
+        ),
+      },
+    },
+  );
+
+  {
+    use Dist::Zilla::Plugin::UploadToCPAN;
+    package Dist::Zilla::Plugin::UploadToCPAN;
+    no warnings 'redefine';
+    sub release { die 'should not be releasing from tests!' }
+  }
+
+  is(
+    exception { $tzil->build },
+    undef,
+    'build successfully with %PAUSE stash',
+  );
+
+  like(
+    $tzil->slurp_file('build/Changes'),
+    qr{^0\.001 NOBODY}m,
+    'added cpanid from %PAUSE username',
+  );
+}
+
 done_testing;
